Entity Framework Code First. Creado Controlador y Vistas para Artista.

--- a/PruebaAcidLabs/Views/Artista/Delete.cshtml
+++ b/PruebaAcidLabs/Views/Artista/Delete.cshtml
@@ -12,19 +12,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Nombre)
+            @Html.DisplayNameFor(model => model.NombreArtista)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Nombre)
+            @Html.DisplayFor(model => model.NombreArtista)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Popularidad)
+            @Html.DisplayNameFor(model => model.PopularidadArtista)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Popularidad)
+            @Html.DisplayFor(model => model.PopularidadArtista)
         </dd>
 
     </dl>
