--- a/PruebaAcidLabs/Views/Buscar/Index.cshtml
+++ b/PruebaAcidLabs/Views/Buscar/Index.cshtml
@@ -7,7 +7,7 @@
 <div id="content">
     <div class="row">
         <form action="@Url.Action("Buscar", "Buscar")">
-            <input id="search-fld" type="text" class="form-control" name="param" placeholder="Buscar Artistas por Nombre">
+            <input id="search" type="text" class="form-control" name="Nombre" placeholder="Buscar Artistas por Nombre">
             <button type="submit" class="btn btn-default">
                 Buscar
             </button>
