--- a/PruebaAcidLabs/Views/Buscar/Buscar.cshtml
+++ b/PruebaAcidLabs/Views/Buscar/Buscar.cshtml
@@ -4,6 +4,8 @@
 }
 
 @using Demo.Helper.External.Models;
+@using PruebaAcidLabs.DAL;
+@using PruebaAcidLabs.Models;
 
 @model IEnumerable <Demo.Helper.External.Models.Artist>
 
@@ -11,6 +13,7 @@
 
 <table class="table table-bordered">
     <tr>
+        <th>ID</th>
         <th>Nombre Artista</th>
         <th>Popularidad</th>
         <th>Guardar</th>
@@ -20,6 +23,9 @@
 
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.ID)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.name)
             </td>
 
@@ -27,7 +33,7 @@
                 @Html.DisplayFor(modelItem => item.popularity)
             </td>
             <td>
-                @Html.ActionLink("Guardar","Guardar",new { name = item.name, popularity = item.popularity },null)
+                @Html.ActionLink("Guardar","Guardar", new { ID = item.ID, name = item.name, popularity = item.popularity })
             </td>
         </tr>
     }
