Guardando Albumes y Pistas. Mostrando las Pistas de cada Album

--- a/PruebaAcidLabs/Views/Album/Create.cshtml
+++ b/PruebaAcidLabs/Views/Album/Create.cshtml
@@ -39,10 +39,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PopularidadAlbum, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Año, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PopularidadAlbum, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PopularidadAlbum, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Año, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Año, "", new { @class = "text-danger" })
             </div>
         </div>
 
