--- a/PruebaAcidLabs/Views/Album/Delete.cshtml
+++ b/PruebaAcidLabs/Views/Album/Delete.cshtml
@@ -28,11 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PopularidadAlbum)
+            @Html.DisplayNameFor(model => model.Año)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PopularidadAlbum)
+            @Html.DisplayFor(model => model.Año)
         </dd>
 
         <dt>
