--- a/PruebaAcidLabs/Views/Album/Index.cshtml
+++ b/PruebaAcidLabs/Views/Album/Index.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.NombreAlbum)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.PopularidadAlbum)
+            @Html.DisplayNameFor(model => model.Año)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Disponibilidad)
@@ -35,7 +35,7 @@
             @Html.DisplayFor(modelItem => item.NombreAlbum)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.PopularidadAlbum)
+            @Html.DisplayFor(modelItem => item.Año)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Disponibilidad)
