--- a/PruebaAcidLabs/Views/Album/Details.cshtml
+++ b/PruebaAcidLabs/Views/Album/Details.cshtml
@@ -43,6 +43,30 @@
         </dd>
 
         <dt>
+            Popularidad Promedio
+        </dt> 
+        
+        <dd>
+            @ViewBag.PopularidadPromedio
+        </dd>
+
+        <dt>
+            Pista Mas Larga
+        </dt> 
+        
+        <dd>
+            @ViewBag.PistaMasLarga
+        </dd>
+
+        <dt>
+            Longitud
+        </dt> 
+        
+        <dd>
+            @ViewBag.LongitudPistaMasLarga
+        </dd>
+
+        <dt>
             Pistas
         </dt>
 
